force-app/main/default/objects/mkto_si__BestBetsCache__c/mkto_si__BestBetsCache__c.object-meta.xml
<CustomObject>
    <label>BestBetsCache</label>
    <nameField>
        <label>BestBetsVO__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BestBetsCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>