force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__BestBetsView__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__BestBetsView__c</fullName>
    <label>BestBetsView</label>
    <length>9</length>
    <type>Text</type>
</CustomField>