force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__ContactId__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ContactId__c</fullName>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>