force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__ContactName__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ContactName__c</fullName>
    <label>ContactName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>