force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__LeadScore__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__LeadScore__c</fullName>
    <label>LeadScore</label>
    <length>4</length>
    <type>Text</type>
</CustomField>