force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__LIMDate__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__LIMDate__c</fullName>
    <label>LIMDate</label>
    <type>DateTime</type>
</CustomField>