force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__LIMDesc__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__LIMDesc__c</fullName>
    <label>LIMDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>