force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__LIMType__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__LIMType__c</fullName>
    <label>LIMType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>