force-app/main/default/objects/mkto_si__BestBetsCache__c/fields/mkto_si__Status__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>